# robotframework-syndata

./: .gitignore  README.md  index.js  pyproject.toml  tasks.py
.lfet/: lfet.project.dschweie.syndata.260210a.lic  lfet.project.dschweie.syndata.260210a.proj  lfet.project.dschweie.syndata.260210b.lic  lfet.project.dschweie.syndata.260210b.proj
SynData/: SynData.py  __init__.py  __main__.py  item_builder_engine.py
SynData/common/: country.py  finance.py  item_builder_engine_faker.py
SynData/common/data/: finance_banks_ad.csv  finance_banks_ae.csv  finance_banks_af.csv  finance_banks_ag.csv  finance_banks_al.csv  finance_banks_am.csv  finance_banks_ao.csv  finance_banks_ar.csv  finance_banks_at.csv  finance_banks_au.csv  finance_banks_az.csv  finance_banks_ba.csv  finance_banks_bb.csv  finance_banks_bd.csv  finance_banks_be.csv  finance_banks_bf.csv  finance_banks_bg.csv  finance_banks_bh.csv  finance_banks_bi.csv  finance_banks_bj.csv  finance_banks_bn.csv  finance_banks_bo.csv  finance_banks_br.csv  finance_banks_bs.csv  finance_banks_bt.csv  finance_banks_bw.csv  finance_banks_by.csv  finance_banks_bz.csv  finance_banks_ca.csv  finance_banks_cd.csv  finance_banks_cf.csv  finance_banks_cg.csv  finance_banks_ch.csv  finance_banks_ci.csv  finance_banks_cl.csv  finance_banks_cm.csv  finance_banks_cn.csv  finance_banks_co.csv  finance_banks_cr.csv  finance_banks_cu.csv  (+152 more)
SynData/de_DE/: address.py  finance.py  item_builder_engine_germany.py  traffic.py
SynData/de_DE/data/: address_ags_cities.csv  finance_banks.csv  finance_codes_blz_bic.csv  first_names.csv  last_names.csv  traffic_license_plates.csv
doc/: SynData.html
lfet/: ItemBuilderEngine.lfet  ItemBuilderEngineFaker.lfet  ItemBuilderEngineFaker.lfet.yaml  ItemBuilderEngineGermany.lfet  ItemBuilderEngineGermany.lfet.yaml  LFET.project.yaml
lfet/testdata/: germany_keywords.csv
lfet/testdata/common/: keywords.csv  localizations.csv
lfet/testdata/de/: keywords_de.csv
lfet/testdata/gherkin/: items_common.csv  items_de.csv  replay.csv
src/SynData/de_DE/: item_builder_engine_germany.py  person.py
src/SynData/de_DE/data/: address_city_county_state.csv
test/: first_acceptance_tests.robot
test/acceptance_test/: 01_no_context_german_location.robot  02_no_context_united_states_location.robot  11_context_and_focus.robot  21_context_with_german_location.robot  61_replay_recorded_data.robot
test/acceptance_test/lfet/: ItemBuilderEngineFaker.testcases.robot  ItemBuilderEngineGermany.testcases.robot
test/acceptance_tests/: 02_no_context_united_states_location.robot  21_context_with_german_location.robot  61_replay_recorded_data.robot
test/acceptance_tests/lfet/: ItemBuilderEngineFaker.testcases.robot  ItemBuilderEngineGermany.testcases.robot
test/data/acceptance_tests/: replay_file_test_suite_61.csv
test/data/unit_tests/: replay_file_gherkin.csv
test/unit_test/features/common/: country_de_translate_to_code.feature  finance_all_create_iban.feature
test/unit_test/features/de_de/address/: build_random_house_number.feature  build_random_location.feature
test/unit_test/features/de_de/traffic/: build_random_license_plate.feature  build_random_license_plate_electric_vehicles.feature  build_random_license_plate_historic_vehicles.feature  combination_of_letters_socially_acceptable.feature
test/unit_test/features/engines/: ItemBuilderEngine.testcases.feature  ItemBuilderEngineFaker.testcases.feature  ItemBuilderEngineGermany.testcases.feature
test/unit_test/mock/: syndatamock.py
test/unit_test/steps/: conftest.py
test/unit_test/steps/common/: test_finance.py  test_translation.py
test/unit_test/steps/de_de/: test_address.py  test_traffic.py
test/unit_test/steps/engines/: conftest.py  test_item_builder_engine.py  test_item_builder_engine_faker.py  test_item_builder_engine_germany.py
