[project]
name = "robotframework-syndata"
version = "0.1.1"
description = "Generation of synthetic test data that is consistent."
authors = [
    {name = "Dirk O. Schweier",email = "dschweie@gmail.com"}
]
license = "GPL-3.0-only"
repository = "https://github.com/dschweie/robotframework-syndata"
readme = "README.md"
requires-python = ">=3.14,<4"
dependencies = [
    "robotframework (>=7.2.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "faker (>=40.0.0)",
    "pandas-stubs (>=3.0.0,<3.1.0)",
    "robotframework-pythonlibcore (>=4.4.1)"
]

[tool.poetry]
packages = [
    {include = "SynData"},
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]
markers = [
    "datadriven: Test cases with this tag supplement the recommended test cases and are based on a set of test data that might otherwise not be used.",
    "negative: Test cases with this tag perform testing on invalid input values or combinations of input values.", 
    "recommended: This tag is set by LF-ET and identifies the test cases that should be executed at a minimum to cover all rules in the decision table.",
    "incomplete: This tag is set by LF-ET if the test case cannot be generated completely.",
    "r01: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r02: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r03: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r04: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r05: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r06: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r07: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r08: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r09: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r10: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r11: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r12: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r13: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r14: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r15: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r16: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r17: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r18: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r19: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r20: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r21: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r22: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r23: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r24: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r25: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r26: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r27: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r28: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r29: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r30: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r31: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r32: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r33: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r34: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r35: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r36: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r37: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r38: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r39: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r40: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r41: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r42: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r43: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r44: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r45: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r46: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r47: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r48: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r49: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r50: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r51: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r52: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r53: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r54: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r55: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r56: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r57: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r58: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r59: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r60: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r61: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r62: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r63: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r64: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r65: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r66: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r67: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r68: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r69: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r70: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r71: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r72: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r73: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r74: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r75: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r76: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r77: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r78: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r79: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r80: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r81: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r82: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r83: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r84: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r85: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r86: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r87: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r88: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r89: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r90: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r91: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r92: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r93: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r94: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r95: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r96: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r97: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r98: This tag is used by LF-ET to connect the test case to a special rule inside the decision table.",
    "r99: This tag is used by LF-ET to connect the test case to a special rule inside the decision table."
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
